@@ -129,6 +129,8 @@ New commands:
   Only list equipments (eq), usable (u), or non usable (nu) items.
 - whoami
   Displays your character and account ID.
+- damage
+  Displays the monsters and skills that damaged you.
 
 New config options:
 - partySkill: target_dist (range)
